[package]
name = "class_group"
version = "0.5.3"
edition = "2018"
description = "Rust library for building IQC: cryptography based on class groups (Cl) of imaginary quadratic orders"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/class"
categories = ["cryptography", "algorithms", "api-bindings"]
keywords = ["IQC", "class-group", "imaginary", "cryptoagorithms"]

authors = ["omershlo <omer.shlomovits@gmail.com>"]
links = "libpari"
build = "build.rs"

[build-dependencies]
bindgen = "0.50"

[dependencies]
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring-algorithm = "0.2.3"
num-traits = "0.2"
curv = { package = "curv-kzen", version = "0.7" }

[dev-dependencies]
criterion = ">=0.2"
rug = "1.2.1"
sha2 = "0.9.1"
proptest = "0.10.1"

[[bench]]
name = "bench-vdf-class"
path = "benches/vdf/class_group.rs"
harness = false
