[package]
name = "class_group"
version = "0.5.2"
authors = ["omershlo <omer.shlomovits@gmail.com>"]
edition = "2018"
links = "libpari"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.50"

[dependencies]
libc = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ring-algorithm = "0.2.3"
num-traits = "0.2"
curv-kzen = "0.8"
sha2 = "0.9"
hmac = "0.11"

[dev-dependencies]
criterion = ">=0.2"
rug = "1.2.1"
sha2 = "0.9.1"
proptest = "0.10.1"

[[bench]]
name = "bench-vdf-class"
path = "benches/vdf/class_group.rs"
harness = false
