[package]
name = "class_group"
version = "0.6.1"
authors = ["omershlo <omer.shlomovits@gmail.com>"]
edition = "2018"
links = "libpari"
build = "build.rs"

description = "Rust library for building IQC: cryptography based on class groups (Cl) of imaginary quadratic orders"
license = "GPL-3.0"
repository = "https://github.com/ZenGo-X/class"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "libpari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.50"
fs_extra = "1"
anyhow = "1"

[dependencies]
libc = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-traits = "0.2"
curv-kzen = { version = "0.10", default-features = false }
sha2 = "0.9"
hmac = "0.11"

[dev-dependencies]
criterion = ">=0.2"
rug = "1.2.1"
sha2 = "0.9.1"
proptest = "0.10.1"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "bench-vdf-class"
path = "benches/vdf/class_group.rs"
harness = false
